<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Department">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_CS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CS" />

        <RadioButton
            android:id="@+id/radioButtonSoftware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Software" />

        <RadioButton
            android:id="@+id/radioButtonBioInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BioInfo" />

        <RadioButton
            android:id="@+id/radioButtonDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DS" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Cancel"
        android:textAllCaps="false"
        android:textColor="#050505"
        app:backgroundTint="#C1C1C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelect"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Select"
        android:textAllCaps="false"
        android:textColor="#070707"
        app:backgroundTint="#C1C1C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>