<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNameInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/Enter_Name"
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewProfileName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Email"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmailInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEmailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Enter_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextNameInput"
        app:layout_constraintStart_toStartOf="@+id/editTextNameInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameInput" />

    <TextView
        android:id="@+id/textViewProfileId"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Id"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextIdInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextIdInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Enter_Id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailInput"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailInput" />

    <TextView
        android:id="@+id/textViewProfileDept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/Dept"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileId" />

    <TextView
        android:id="@+id/textViewDeptInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileDept"
        app:layout_constraintStart_toStartOf="@+id/editTextIdInput" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Select"
        android:textAllCaps="false"
        android:textColor="#070707"
        android:textSize="14sp"
        app:backgroundTint="#C1C1C1"
        app:layout_constraintEnd_toEndOf="@+id/editTextIdInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdInput" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:textColor="#050505"
        android:textSize="14sp"
        app:backgroundTint="#C1C1C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>